--- a/notebooks/02-Extracting-Text-From-Images.ipynb
+++ b/notebooks/02-Extracting-Text-From-Images.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,12 +291,33 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Creating Full Text \n",
+    "we will create a new column called *full_text* that contain the original text message and the ocr result"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data.to_csv(\"../data/data_v2.csv\", index=False)\n"
+    "data.raw_text.fillna('' , inplace=True)\n",
+    "data.ocr_res.fillna('',inplace=True)\n",
+    "\n",
+    "data['full_text'] = (data.raw_text + '\\n' + data.ocr_res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.to_csv(\"../data/data_v2.csv\", index=False)"
    ]
   }
  ],
