documenting and reformatting

--- a/notebooks/02-Extracting-Text-From-Images.ipynb
+++ b/notebooks/02-Extracting-Text-From-Images.ipynb
@@ -33,29 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# reading data\n",
-    "data = pd.read_csv(\"../data/data_v1.csv\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# initializing model with corresponding parameters\n",
-    "ocr = PaddleOCR(\n",
-    "    use_angle_cls=False, lang=\"en\", drop_score=0.92, show_log=False, use_gpu=True\n",
-    ")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -185,18 +163,32 @@
        "4  https://www.facebook.com/384708578676644/posts...      link  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data.head()\n"
+    "# reading data\n",
+    "data = pd.read_csv(\"../data/data_v1.csv\")\n",
+    "data.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# initializing model with corresponding parameters\n",
+    "ocr = PaddleOCR(\n",
+    "    use_angle_cls=False, lang=\"en\", drop_score=0.92, show_log=False, use_gpu=True\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +197,7 @@
        "((892, 9), 708)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,10 +266,10 @@
     {
      "data": {
       "text/plain": [
-       "job_post    155\n",
-       "empty        32\n",
-       "others       19\n",
-       "link          4\n",
+       "job_post    151\n",
+       "others       18\n",
+       "empty        15\n",
+       "link          2\n",
        "Name: type, dtype: int64"
       ]
      },
@@ -301,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
