data cleaning and fill missing values

--- a/notebooks/05-Analyze-JobPosts.ipynb
+++ b/notebooks/05-Analyze-JobPosts.ipynb
@@ -931,6 +931,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.to_csv(\"../data/data_v4.csv\", index=False)"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
