--- a/notebooks/07-Data-Visualization.ipynb
+++ b/notebooks/07-Data-Visualization.ipynb
@@ -5,7 +5,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Data Visualization\n"
+    "# Data Visualization\n",
+    "\n",
+    "we will use Plotly to create charts and visualize data.\n"
    ]
   },
   {
@@ -21,13 +23,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
     "color_palette = [\n",
     "    \"#82AAE3\",\n",
     "    \"#91D8E4\",\n",
+    "    \"#62B6B7\",\n",
     "    \"#BFEAF5\",\n",
     "    \"#EAFDFC\",\n",
     "    \"#FFD998\",\n",
@@ -267,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -1201,7 +1204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -6462,7 +6465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -6489,41 +6492,26 @@
          "showlegend": false,
          "type": "histogram",
          "x": [
-          null,
           3,
           1,
-          null,
-          null,
-          null,
-          null,
-          null,
           2,
           2,
           0,
           1,
-          null,
           1,
           2,
           2,
           2,
           5,
           5,
-          null,
           2,
           2,
-          null,
           1,
-          null,
           1,
           2,
           3,
           5,
-          null,
           2,
-          null,
-          null,
-          null,
-          null,
           4,
           5,
           1,
@@ -6532,26 +6520,15 @@
           5,
           4,
           7,
-          null,
           2,
           2,
-          null,
-          null,
           3,
-          null,
-          null,
           3,
-          null,
           1,
           2,
           2,
-          null,
-          null,
-          null,
           4,
-          null,
           2,
-          null,
           4,
           3,
           3,
@@ -6559,29 +6536,16 @@
           4,
           2,
           3,
-          null,
-          null,
           2,
           1,
           2,
-          null,
           3,
-          null,
-          null,
-          null,
-          null,
           2,
           1,
           2,
-          null,
           3,
-          null,
           4,
-          null,
           2,
-          null,
-          null,
-          null,
           2,
           2,
           2,
@@ -6592,69 +6556,30 @@
           1,
           3,
           2,
-          null,
-          null,
           1,
           2,
-          null,
           3,
           3,
-          null,
-          null,
-          null,
-          null,
           1,
           1,
           2,
           1,
           1,
-          null,
           1,
           2,
-          null,
-          null,
           1,
-          null,
-          null,
-          null,
           2,
           2,
-          null,
-          null,
           1,
-          null,
           5,
           2,
           1,
-          null,
-          null,
           3,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
           3,
-          null,
           5,
-          null,
-          null,
           2,
-          null,
-          null,
-          null,
-          null,
           3,
-          null,
-          null,
-          null,
-          null,
-          null,
           6,
-          null,
-          null,
           8,
           5,
           3,
@@ -6662,221 +6587,69 @@
           6,
           5,
           2,
-          null,
-          null,
-          null,
           1,
           1,
-          null,
           2,
-          null,
-          null,
-          null,
-          null,
-          null,
           1,
           1,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
           2,
           2,
           3,
-          null,
-          2,
-          null,
-          null,
-          null,
-          1,
-          null,
-          null,
-          null,
-          null,
           2,
           1,
-          null,
           2,
           1,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
+          2,
           1,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
+          1,
           3,
-          null,
-          null,
           2,
           2,
           3,
-          null,
-          null,
-          null,
           1,
-          null,
-          null,
           2,
-          null,
-          null,
           5,
-          null,
           1,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
           3,
           3,
-          null,
-          null,
-          null,
           2,
-          null,
           1,
-          null,
-          30,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
           1,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
           4,
           3,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          2,
-          null,
-          null,
-          null,
           2,
           2,
-          null,
-          null,
+          2,
           1,
           1,
-          null,
-          null,
-          null,
-          null,
-          null,
           3,
           3,
           3,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
           1,
-          null,
-          null,
           1,
           3,
-          null,
-          null,
           1,
-          null,
           5,
           3,
           3,
           2,
           1,
           2,
-          null,
           1,
-          null,
-          null,
           3,
           1,
-          null,
-          null,
-          null,
-          null,
           2,
-          null,
           3,
-          null,
           1,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
           4,
-          null,
-          null,
           2,
           2,
           1,
-          null,
-          null,
           1,
-          null,
           1,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
           1,
           2,
           1,
-          null,
           2,
           3,
           2,
@@ -6885,247 +6658,94 @@
           3,
           3,
           1,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
           1,
           2,
-          null,
-          null,
           1,
           1,
-          null,
           2,
-          null,
-          null,
-          null,
-          null,
           2,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
           2,
-          null,
-          null,
-          null,
           2,
-          null,
           1,
-          null,
-          null,
           2,
           2,
           3,
           1,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
           3,
           3,
-          null,
           3,
           1,
-          null,
           1,
-          null,
           3,
-          null,
           5,
           1,
-          null,
           2,
-          null,
-          null,
-          1,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          5,
-          null,
-          3,
-          null,
-          1,
-          3,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          2,
-          null,
-          2,
-          3,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          2,
-          null,
-          null,
           1,
           5,
           3,
-          null,
-          null,
-          2,
-          2,
-          null,
-          1,
-          null,
-          null,
-          null,
-          1,
-          null,
-          null,
-          null,
-          null,
-          1,
-          null,
-          1,
-          null,
           1,
           3,
-          null,
-          null,
+          2,
+          2,
           3,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
+          2,
+          1,
+          5,
+          3,
+          2,
+          2,
+          1,
+          1,
+          1,
+          1,
+          1,
+          3,
+          3,
           1,
           2,
           3,
-          null,
           2,
           0,
           0,
-          null,
           2,
-          null,
-          null,
           2,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
           3,
           1,
-          null,
-          null,
-          null,
-          1,
-          null,
-          2,
-          1,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          2,
-          null,
-          null,
           1,
           2,
+          1,
           2,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          3,
-          null,
-          null,
+          1,
+          2,
           2,
           3,
-          null,
+          2,
+          3,
           1,
-          null,
           5,
-          null,
           5,
           1,
-          null,
-          null,
           10,
           3,
-          null,
           2,
           4,
-          null,
-          null,
           3,
-          null,
           5,
-          null,
           3,
           1,
           3,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
           1,
           3,
-          null,
-          null,
-          null,
           4,
           9,
-          null,
-          null,
           3,
           3,
           4,
-          null,
-          null,
-          null,
-          null,
-          null,
           3,
           2,
           4,
           3,
           2,
-          null,
-          null,
-          null,
-          null,
-          null,
           5,
           1,
           1,
@@ -7134,53 +6754,26 @@
           2,
           1,
           1,
-          null,
-          null,
           2,
-          null,
           1,
-          null,
-          null,
           3,
           4,
-          null,
-          null,
           3,
-          null,
-          null,
-          null,
           4,
           1,
-          null,
-          null,
           2,
           3,
           3,
           3,
           3,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
           2,
-          null,
           2,
-          null,
-          null,
           3,
           2,
           2,
-          null,
           2,
-          null,
           5,
-          null,
-          null,
           3,
-          null,
           3,
           1,
           5,
@@ -7188,66 +6781,21 @@
           3,
           3,
           3,
-          null,
-          null,
-          null,
-          4,
-          null,
-          5,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          1,
-          1,
-          1,
-          null,
           4,
           5,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          5,
-          null,
-          null,
           1,
-          null,
+          1,
+          1,
           4,
-          null,
-          null,
+          5,
+          5,
+          1,
+          4,
           2,
           1,
-          null,
-          null,
-          null,
-          null,
-          null,
           1,
           1,
           3,
-          null,
           1,
           2,
           2,
@@ -7255,72 +6803,33 @@
           5,
           1,
           2,
-          null,
           3,
           2,
           1,
           3,
           2,
-          null,
           2,
-          null,
           1,
-          null,
-          null,
           3,
-          null,
           1,
           2,
           3,
-          null,
           3,
-          null,
           2,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          1,
-          null,
-          null,
-          null,
-          null,
-          null,
-          1,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
           1,
           1,
-          null,
-          null,
           1,
-          null,
+          1,
+          1,
           2,
           2,
           3,
-          null,
-          null,
-          2,
-          null,
-          null,
-          3,
-          null,
-          null,
           2,
           3,
-          null,
+          2,
           3,
-          null,
-          null,
           3,
-          null
+          3
          ],
          "xaxis": "x",
          "yaxis": "y"
@@ -8184,7 +7693,7 @@
    ],
    "source": [
     "px.histogram(\n",
-    "    data,\n",
+    "    data[data.avg_exp_years < 16],\n",
     "    x='avg_exp_years',\n",
     "    color_discrete_sequence=color_palette[1:],\n",
     "    labels={\"count\": \"\", \"avg_exp_years\": \"Experience Years\"},\n",
@@ -11829,7 +11338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
